@@ -1,9 +1,34 @@
+/*
+ * Copyright 2024 Lambda
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+val modVersion: String by project
+val minecraftVersion: String by project
 val modId: String by project
 val fabricLoaderVersion: String by project
-val kotlinVersion: String by project
 val kotlinxCoroutinesVersion: String by project
+val discordIPCVersion: String by project
+val ktorVersion: String by project
+val mockitoKotlin: String by project
+val mockitoInline: String by project
+val mockkVersion: String by project
 
-architectury { common("fabric", "forge", "neoforge") }
+base.archivesName = "${base.archivesName.get()}-api"
+
+architectury { common("fabric", "forge") }
 
 loom {
     silentMojangMappingsLicense()
@@ -21,16 +46,41 @@ dependencies {
 
     // Add dependencies on the required Kotlin modules.
     implementation("org.reflections:reflections:0.10.2")
+    implementation("com.github.Edouard127:KDiscordIPC:$discordIPCVersion")
+    implementation("com.pngencoder:pngencoder:0.15.0")
+
+    // Ktor
+    implementation("io.ktor:ktor-client-core:$ktorVersion")
+    implementation("io.ktor:ktor-client-cio:$ktorVersion")
+    implementation("io.ktor:ktor-client-content-negotiation:$ktorVersion")
+    implementation("io.ktor:ktor-serialization-gson:$ktorVersion")
 
     // Add Kotlin
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxCoroutinesVersion")
-    implementation(kotlin("reflect"))
 
     // Baritone
-    // modImplementation("baritone-api:baritone-api:1.10.2")
-    modImplementation("baritone-api:baritone-unoptimized-fabric:1.10.2")
+    modImplementation("baritone-api:baritone-unoptimized-fabric:1.10.2") { isTransitive = false }
+
+    // Test implementations
+    testImplementation(kotlin("test"))
+    testImplementation("org.mockito.kotlin:mockito-kotlin:$mockitoKotlin")
+    testImplementation("org.mockito:mockito-inline:$mockitoInline")
+    testImplementation("io.mockk:mockk:${mockkVersion}")
 }
 
-tasks.test {
-    useJUnitPlatform()
+tasks {
+    remapJar {
+        archiveVersion = "$modVersion+$minecraftVersion"
+    }
+
+    test {
+        useJUnitPlatform()
+        jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
+    }
+}
+
+tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
+    kotlinOptions {
+        jvmTarget = "17"
+    }
 }
